// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`currentRefinements() render() DOM output renders correctly 1`] = `
{
  "cssClasses": {
    "category": "ais-CurrentRefinements-category category",
    "categoryLabel": "ais-CurrentRefinements-categoryLabel categoryLabel",
    "delete": "ais-CurrentRefinements-delete delete",
    "item": "ais-CurrentRefinements-item item",
    "label": "ais-CurrentRefinements-label label",
    "list": "ais-CurrentRefinements-list list",
    "root": "ais-CurrentRefinements root",
  },
  "items": [
    {
      "attribute": "facet",
      "indexName": "indexName",
      "label": "facet",
      "refine": [Function],
      "refinements": [
        {
          "attribute": "facet",
          "label": "facetAttribute",
          "type": "facet",
          "value": "facetAttribute",
        },
      ],
    },
    {
      "attribute": "facetExclude",
      "indexName": "indexName",
      "label": "facetExclude",
      "refine": [Function],
      "refinements": [
        {
          "attribute": "facetExclude",
          "label": "facetExcludeAttribute",
          "type": "exclude",
          "value": "facetExcludeAttribute",
        },
      ],
    },
    {
      "attribute": "rating",
      "indexName": "indexName",
      "label": "rating",
      "refine": [Function],
      "refinements": [
        {
          "attribute": "rating",
          "label": "4",
          "type": "disjunctive",
          "value": "4",
        },
        {
          "attribute": "rating",
          "label": "5",
          "type": "disjunctive",
          "value": "5",
        },
      ],
    },
    {
      "attribute": "brand",
      "indexName": "indexName",
      "label": "brand",
      "refine": [Function],
      "refinements": [
        {
          "attribute": "brand",
          "label": "Samsung",
          "type": "disjunctive",
          "value": "Samsung",
        },
        {
          "attribute": "brand",
          "label": "Apple",
          "type": "disjunctive",
          "value": "Apple",
        },
      ],
    },
    {
      "attribute": "hierarchicalCategories.lvl0",
      "indexName": "indexName",
      "label": "hierarchicalCategories.lvl0",
      "refine": [Function],
      "refinements": [
        {
          "attribute": "hierarchicalCategories.lvl0",
          "count": 3291,
          "exhaustive": true,
          "label": "Cell Phones",
          "type": "hierarchical",
          "value": "Cell Phones",
        },
      ],
    },
    {
      "attribute": "price",
      "indexName": "indexName",
      "label": "price",
      "refine": [Function],
      "refinements": [
        {
          "attribute": "price",
          "label": "≥ 100",
          "operator": ">=",
          "type": "numeric",
          "value": 100,
        },
        {
          "attribute": "price",
          "label": "≤ 500",
          "operator": "<=",
          "type": "numeric",
          "value": 500,
        },
      ],
    },
    {
      "attribute": "_tags",
      "indexName": "indexName",
      "label": "_tags",
      "refine": [Function],
      "refinements": [
        {
          "attribute": "_tags",
          "label": "tag1",
          "type": "tag",
          "value": "tag1",
        },
        {
          "attribute": "_tags",
          "label": "tag2",
          "type": "tag",
          "value": "tag2",
        },
      ],
    },
  ],
}
`;

exports[`currentRefinements() render() options.container should render with a HTMLElement container 1`] = `
{
  "cssClasses": {
    "category": "ais-CurrentRefinements-category",
    "categoryLabel": "ais-CurrentRefinements-categoryLabel",
    "delete": "ais-CurrentRefinements-delete",
    "item": "ais-CurrentRefinements-item",
    "label": "ais-CurrentRefinements-label",
    "list": "ais-CurrentRefinements-list",
    "root": "ais-CurrentRefinements",
  },
  "items": [],
}
`;

exports[`currentRefinements() render() should render twice <CurrentRefinements ... /> 1`] = `
{
  "cssClasses": {
    "category": "ais-CurrentRefinements-category",
    "categoryLabel": "ais-CurrentRefinements-categoryLabel",
    "delete": "ais-CurrentRefinements-delete",
    "item": "ais-CurrentRefinements-item",
    "label": "ais-CurrentRefinements-label",
    "list": "ais-CurrentRefinements-list",
    "root": "ais-CurrentRefinements",
  },
  "items": [
    {
      "attribute": "facet",
      "indexName": "index_name",
      "label": "facet",
      "refine": [Function],
      "refinements": [
        {
          "attribute": "facet",
          "count": 1,
          "exhaustive": true,
          "label": "facet-val1",
          "type": "facet",
          "value": "facet-val1",
        },
      ],
    },
  ],
}
`;

exports[`currentRefinements() render() should render twice <CurrentRefinements ... /> 2`] = `
{
  "cssClasses": {
    "category": "ais-CurrentRefinements-category",
    "categoryLabel": "ais-CurrentRefinements-categoryLabel",
    "delete": "ais-CurrentRefinements-delete",
    "item": "ais-CurrentRefinements-item",
    "label": "ais-CurrentRefinements-label",
    "list": "ais-CurrentRefinements-list",
    "root": "ais-CurrentRefinements",
  },
  "items": [
    {
      "attribute": "facet",
      "indexName": "index_name",
      "label": "facet",
      "refine": [Function],
      "refinements": [
        {
          "attribute": "facet",
          "count": 1,
          "exhaustive": true,
          "label": "facet-val1",
          "type": "facet",
          "value": "facet-val1",
        },
      ],
    },
  ],
}
`;
